# bill-of-zero

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deployment.json
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/poseidon-demo/: Cargo.toml
contracts/poseidon-demo/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/server/: index.mjs
frontend/src/: App.tsx  index.css  main.tsx  translations.ts  types.ts  ui.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Hero.tsx  Layout.tsx  Modals.tsx  Panel.tsx  Stats.tsx  ThreatFeed.tsx
frontend/src/lib/: api.ts  proofStore.ts  stellar.ts
frontend/src/pages/: Audit.tsx  Escrow.tsx  Landing.tsx  Prove.tsx
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
sample_data/: approved_origins.json  approved_sellers.json  docs_tampered.json  docs_valid.json  lc_terms.json
scripts/: deploy_escrow.sh  fund_release.sh  retry_release.sh
tui/: Cargo.toml
tui/src/: app.rs  backend.rs  config.rs  main.rs  ui.rs  util.rs
