[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
bz-core = { path = "../core" }
risc0-zkvm = { version = "^3.0.5" }
# Provides encode_seal() to turn a Groth16 receipt into the selector-prefixed
# seal the Nethermind VerifierRouter expects.
risc0-ethereum-contracts = "^3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Feature 4: sign the documents with the issuer key so the guest can verify.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
