[package]
name = "bz-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The TUI is a thin orchestrator: it shells out to the existing `host` binary
# (proving + audit) and the `stellar` CLI (on-chain fund/release), so it has no
# heavy zk/Stellar dependencies of its own and compiles fast.
