[package]
name = "escrow"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone workspace so this Soroban contract uses its own release profile
# and is built with `stellar contract build` independently of the risc0 host.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "25.1.0"
# Cross-contract client for the official Nethermind RISC Zero VerifierRouter.
risc0-interface = { git = "https://github.com/NethermindEth/stellar-risc0-verifier", package = "risc0-interface" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
